// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evidence > EvidenceDetail loads the evidence of its request, or shows the refusal 1`] = `
div
  div
    div
    div
`;

exports[`evidence > an unnumbered quote without context, a long quote folded 1`] = `
div
  div
    div
      h3
        "원문 인용 "
        span "E1"
      p "제목 없음"
      p
        "HWP · 1장 · 표 3 (쪽 번호 없음: 원문 파일에서 확인)"
        " · "
        "자동 대조 통과"
    div
      blockquote
        div
          p "가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가"
      button type="button" aria-expanded="false" "인용문 일부 표시 · 전체 펼치기"
    div
`;

exports[`evidence > numbered quote with warnings, surrounding paragraphs and download 1`] = `
div
  div
    div
      h3
        "근거 "
        span "3"
        " 원문 인용"
      p "통합 정보시스템 구축"
      p
        "PDF 12쪽 (인쇄 쪽번호 11) · 제3장 > 하자보수"
        " · "
        "자동 대조 통과"
    div
      p
        svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
        "원문 확인이 필요한 근거"
      ul
        li "그림 속 글자를 OCR로 읽은 근거입니다. 원본 그림을 확인하세요."
        li "custom"
    div
      blockquote
        div
          p "하자보수 기간은 검수 후 12개월로 한다."
    div
      button type="button" aria-expanded="false" "앞뒤 문단 포함 전체 원문 보기"
    a href="/api/originals/doc-aaaaaaaa/hash-a"
      svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
      "원문 파일 받기"
`;

exports[`markers and sentences > a comparison groups sentences under 문서 1 and 문서 2 and badges inferences 1`] = `
div
  section aria-label="답변 내용"
    div
      h3 "문서 1"
      p
        "A는 12개월"
        span
          span
            span "["
            "1"
            span "]"
      p "A는 무상"
    div
      h3 "문서 2"
      p
        span
          span aria-hidden="true"
          "추론"
        "B는 6개월"
        span
          span
            span "["
            "2"
            span "]"
`;

exports[`markers and sentences > openable markers are buttons that report the clicked evidence 1`] = `
div
  span
    button type="button" aria-pressed="false" aria-label="근거 2 원문 보기"
      span "["
      "2"
      span "]"
    button type="button" aria-pressed="true" aria-label="근거 1 원문 보기"
      span "["
      "1"
      span "]"
`;

exports[`markers and sentences > unvalidated markers are plain numbers, and no known ID renders nothing 1`] = `
div
  span
    span
      span "["
      "1"
      span "]"
`;

exports[`state head > answered 1`] = `
div
  div
    span
      span aria-hidden="true"
      "답변"
    p
      "하자보수 기간은 12개월입니다."
      span
        span
          span "["
          "1"
          span "]"
        span
          span "["
          "2"
          span "]"
`;

exports[`state head > budget_blocked 1`] = `
div
  div
    span
      span aria-hidden="true"
      "사용 한도로 차단"
    p "운영 한도에 도달했습니다."
    p "검색, 기본 정보, 요구사항 목록, 원문 열람은 계속 무료로 쓸 수 있습니다."
`;

exports[`state head > clarification_required 1`] = `
div
  div
    span
      span aria-hidden="true"
      "확인 필요"
    div
      svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
      div
        p "어느 사업인가요?"
        p
          "다음 확인: "
          "사업명을 알려 주세요."
`;

exports[`state head > insufficient_evidence 1`] = `
div
  div
    span
      span aria-hidden="true"
      "근거 부족"
    p
      "근거가 부족합니다."
      span
        span
          span "["
          "1"
          span "]"
        span
          span "["
          "2"
          span "]"
`;

exports[`state head > made_up_status 1`] = `
div
  div
    span
      span aria-hidden="true"
      "made_up_status"
    p
      "하자보수 기간은 12개월입니다."
      span
        span
          span "["
          "1"
          span "]"
        span
          span "["
          "2"
          span "]"
`;

exports[`state head > technical_error 1`] = `
div
  div role="alert"
    svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
    div
      p "기술 오류로 답변을 만들지 못했습니다"
      p "잠시 후 다시 시도하세요."
      p
        "사유 코드: "
        "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
`;

exports[`tables > conflicts list each alternative, with a document column in a comparison 1`] = `
div
  section
    div
      h3 "서로 다른 값"
    div
      table
        caption "서로 다른 값"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "값"
            th scope="col" "근거"
        tbody
          tr
            td "사업 금액"
            td "100"
            td
              span
                span
                  span "["
                  "1"
                  span "]"
          tr
            td
            td "200"
            td
              span
                span
                  span "["
                  "2"
                  span "]"
`;

exports[`tables > conflicts list each alternative, with a document column in a comparison 2`] = `
div
  section
    div
      h3 "서로 다른 값"
    div
      table
        caption "서로 다른 값"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "문서"
            th scope="col" "값"
            th scope="col" "근거"
        tbody
          tr
            td "사업 금액"
            td "문서 1"
            td "100"
            td
              span
                span
                  span "["
                  "1"
                  span "]"
          tr
            td
            td "문서 2"
            td "200"
            td
              span
                span
                  span "["
                  "2"
                  span "]"
`;

exports[`tables > facts for one document: value and state columns 1`] = `
div
  section
    div
      h3 "기본 정보"
      span "CSV 기록 기준 · 충돌과 빈 값은 추정하지 않습니다"
    div
      table
        caption "기본 정보"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "값"
            th scope="col" "상태"
        tbody
          tr
            th scope="row" "사업명"
            td "통합 정보시스템"
            td
              span "기록됨"
          tr
            th scope="row" "사업 금액"
            td "130,000,000원"
            td
              span
                span aria-hidden="true"
                "0원(검토 필요)"
          tr
            th scope="row" "입찰 마감"
            td "2024-03-20 10:00"
            td
              span
                span aria-hidden="true"
                "검토자 확인값"
          tr
            th scope="row" "발주 기관"
            td "미상"
            td
              span
                span aria-hidden="true"
                "값 없음"
`;

exports[`tables > facts for two documents: one column each, a missing fact as - 1`] = `
div
  section
    div
      h3 "기본 정보"
      span "CSV 기록 기준 · 충돌과 빈 값은 추정하지 않습니다"
    div
      table
        caption "기본 정보"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "문서 1"
            th scope="col" "문서 2"
        tbody
          tr
            th scope="row" "사업명"
            td "통합 정보시스템"
            td
              "B 사업"
              span
                span aria-hidden="true"
                "충돌(원문 확인 필요)"
          tr
            th scope="row" "사업 금액"
            td
              "130,000,000원"
              span
                span aria-hidden="true"
                "0원(검토 필요)"
            td "-"
          tr
            th scope="row" "입찰 마감"
            td
              "2024-03-20 10:00"
              span
                span aria-hidden="true"
                "검토자 확인값"
            td "-"
          tr
            th scope="row" "발주 기관"
            td
              "미상"
              span
                span aria-hidden="true"
                "값 없음"
            td "-"
`;

exports[`tables > missing fields, with a document column in a comparison 1`] = `
div
  section
    div
      h3 "확인되지 않은 정보"
    div
      table
        caption "확인되지 않은 정보"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "사유"
        tbody
          tr
            td "입찰 마감"
            td "검색된 근거에 없음"
          tr
            td "custom"
            td "custom_reason"
`;

exports[`tables > missing fields, with a document column in a comparison 2`] = `
div
  section
    div
      h3 "확인되지 않은 정보"
    div
      table
        caption "확인되지 않은 정보"
        thead
          tr
            th scope="col" "항목"
            th scope="col" "사유"
            th scope="col" "문서"
        tbody
          tr
            td "입찰 마감"
            td "검색된 근거에 없음"
            td "문서 2"
          tr
            td "custom"
            td "custom_reason"
            td "-"
`;

exports[`tables > next action: warning tone when evidence is short, hidden for clarification 1`] = `
div
  div
    svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
    p
      span "다음 확인"
      " · "
      "원문을 확인하세요."
`;

exports[`tables > next action: warning tone when evidence is short, hidden for clarification 2`] = `
div
  div
    svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
    p
      span "다음 확인"
      " · "
      "원문 확인"
`;

exports[`tables > one group shows no group rows; completeness text hides when the summary carries it 1`] = `
div
  section
    div
      h3 "요구사항 1개"
      span
        "상세 "
        "0"
        " · 요약만 "
        "0"
    div
      table
        caption "요구사항 목록"
        thead
          tr
            th scope="col" "코드"
            th scope="col" "이름"
            th scope="col" "구분"
            th scope="col" "위치"
        tbody
          tr
            td
              button type="button" aria-label="SFR-001 원문 보기" "SFR-001"
            td "통합 로그인"
            td "상세"
            td title="PDF 40쪽" "40쪽"
`;

exports[`tables > requirements group by source-form prefix and open their evidence 1`] = `
div
  section
    div
      h3 "요구사항 4개"
      span
        "상세 "
        "3"
        " · 요약만 "
        "1"
    p "요구사항 4개를 모두 찾았습니다."
    p
      span
        "SFR"
        " "
        span "2"
      span
        "PER"
        " "
        span "1"
      span
        "기타"
        " "
        span "1"
    div
      table
        caption "요구사항 목록"
        thead
          tr
            th scope="col" "코드"
            th scope="col" "이름"
            th scope="col" "구분"
            th scope="col" "위치"
        tbody
          tr
            th scope="rowgroup" colspan="4"
              "SFR"
              " "
              span
                "2"
                "개"
          tr
            td
              button type="button" aria-label="SFR-001 원문 보기" "SFR-001"
            td "통합 로그인"
            td "상세"
            td title="PDF 40쪽" "40쪽"
          tr
            td
              button type="button" aria-label="SFR-002 원문 보기" "SFR-002"
            td "권한 관리"
            td "상세"
            td title="HWP · 4장 > 기능 (쪽 번호 없음: 원문 파일에서 확인)" "기능"
          tr
            th scope="rowgroup" colspan="4"
              "PER"
              " "
              span
                "1"
                "개"
          tr
            td "PER_01"
            td "-"
            td
              span
                span aria-hidden="true"
                "요약"
            td title="HWP · 표 54 (쪽 번호 없음: 원문 파일에서 확인)" "표 54"
          tr
            th scope="rowgroup" colspan="4"
              "기타"
              " "
              span
                "1"
                "개"
          tr
            td
              button type="button" aria-label=" 원문 보기"
            td "기타 항목"
            td "상세"
            td title="HWP (쪽 번호 없음: 원문 파일에서 확인)" "-"
    p
      "같은 코드의 상세 행이 여러 번 나옵니다: "
      "SFR-001"
`;
